Fixed Tab Cutoff

--- a/theme.css
+++ b/theme.css
@@ -977,7 +977,7 @@ body.custom-bullets-enabled {
 }
 
 .mod-root .workspace-tab-header-container-inner {
-    padding-left: 4px !important;
+    /* padding-left: 4px !important; */
     padding-top: 2px;
 }
 
